@@ -2037,7 +2037,7 @@ typedef struct tagGCP_RESULTSA {
 	INT *lpDx;
 	INT *lpCaretPos;
 	LPSTR lpClass;
-	UINT *lpGlyphs;
+	LPWSTR lpGlyphs;
 	UINT nGlyphs;
 	UINT nMaxFit;
 } GCP_RESULTSA,*LPGCP_RESULTSA;
@@ -2048,7 +2048,7 @@ typedef struct tagGCP_RESULTSW {
 	INT *lpDx;
 	INT *lpCaretPos;
 	LPWSTR lpClass;
-	UINT *lpGlyphs;
+	LPWSTR lpGlyphs;
 	UINT nGlyphs;
 	UINT nMaxFit;
 } GCP_RESULTSW,*LPGCP_RESULTSW;
@@ -2377,14 +2377,22 @@ typedef struct _GRADIENT_RECT {
 	ULONG UpperLeft;
 	ULONG LowerRight;
 }GRADIENT_RECT,*PGRADIENT_RECT,*LPGRADIENT_RECT;
-typedef struct _DISPLAY_DEVICE {
+typedef struct _DISPLAY_DEVICEA {
+  DWORD cb;
+  CHAR DeviceName[32];
+  CHAR DeviceString[128];
+  DWORD StateFlags;
+  CHAR DeviceID[128];
+  CHAR DeviceKey[128];
+} DISPLAY_DEVICEA, *PDISPLAY_DEVICEA, *LPDISPLAY_DEVICEA;
+typedef struct _DISPLAY_DEVICEW {
   DWORD cb;
   WCHAR DeviceName[32];
   WCHAR DeviceString[128];
   DWORD StateFlags;
   WCHAR DeviceID[128];
   WCHAR DeviceKey[128];
-} DISPLAY_DEVICE, *PDISPLAY_DEVICE;
+} DISPLAY_DEVICEW, *PDISPLAY_DEVICEW, *LPDISPLAY_DEVICEW;
 
 typedef BOOL (CALLBACK *ABORTPROC)(HDC,int);
 typedef int (CALLBACK *MFENUMPROC)(HDC,HANDLETABLE*,METARECORD*,int,LPARAM);
@@ -2789,6 +2797,7 @@ typedef NEWTEXTMETRICW NEWTEXTMETRIC,*PNEWTEXTMETRIC,*LPNEWTEXTMETRIC;
 typedef NEWTEXTMETRICEXW NEWTEXTMETRICEX;
 typedef ENUMLOGFONTW ENUMLOGFONT,*LPENUMLOGFONT;
 typedef ENUMLOGFONTEXW ENUMLOGFONTEX,*LPENUMLOGFONTEX;
+typedef DISPLAY_DEVICEW DISPLAY_DEVICE, *PDISPLAY_DEVICE, *LPDISPLAY_DEVICE;
 #define AddFontResource AddFontResourceW
 #if (_WIN32_WINNT >= 0x0500)
 #define AddFontResourceEx AddFontResourceExW
@@ -2857,6 +2866,7 @@ typedef NEWTEXTMETRICA NEWTEXTMETRIC,*PNEWTEXTMETRIC,*LPNEWTEXTMETRIC;
 typedef NEWTEXTMETRICEXA NEWTEXTMETRICEX;
 typedef ENUMLOGFONTA ENUMLOGFONT,*LPENUMLOGFONT;
 typedef ENUMLOGFONTEXA ENUMLOGFONTEX,*LPENUMLOGFONTEX;
+typedef DISPLAY_DEVICEA DISPLAY_DEVICE, *PDISPLAY_DEVICE, *LPDISPLAY_DEVICE;
 #define AddFontResource AddFontResourceA
 #if (_WIN32_WINNT >= 0x0500)
 #define AddFontResourceEx AddFontResourceExA
